[TEST_BUG] Adapt collectorPolicy internal tests to support 64K pages

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • 9
    • b54

        sanity/ExecuteInternalVMTests.java fails on systems with 64K page size.

        The tests in class TestGenCollectorPolicy in memory/collectorPolicy.cpp do not forsee adaptions made for 64K pages. These tests set a row of fixed flag values, and one special value to test. Then they call the heap ergonomics and check the expected result of the special value.

        With 64K page size, the heap ergonomics adapt more values, breaking the tests. Wrt. the adapted flag values the tests are correct though.

        This change makes the expected values depend on the adapted flags, and the tests pass. They only depend on adapted flags that are not subject of the corresponding test.

        ...
        Running test: TestNewSize_test()
        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=/collectorPolicy.cpp:1015
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/sapmnt/home1/d045726/oJ/aarch-hs-comp/src/share/vm/memory/collectorPolicy.cpp:1015), pid=30500, tid=4398080324160
        # assert(msp.initial_young_size() == expected) failed: 44695552 != 34930688

                                   

              Assignee:
              Goetz Lindenmaier
              Reporter:
              Goetz Lindenmaier
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: