8071822: [TEST_BUG] Adapt collectorPolicy internal tests to support 64K pages

This fixes jtreg test ExecuteInternalVMTests.java for OSes with bigger default page sizes.

Reviewed-by: jmasa